# arch-couple-installer

./: pyproject.toml
doc/: payload.md
installer/: go.mod
installer/pkg/arch_chroot/: arch_chroot.go  errors.go
installer/pkg/core/: errors.go  microcode.go  pacstrap.go
installer/pkg/grub/: grub.go
installer/pkg/hostname/: errors.go  hostname.go
installer/pkg/json_parser/: json_parser.go
installer/pkg/locale/: errors.go  locale.go
installer/pkg/mirrors/: errors.go  mirrors.go
installer/pkg/partition/: errors.go  partition.go  sfdisk.go  types.go
installer/pkg/postinstall/: errors.go  gpu.go  packages.go  postinstall.go  sudo.go  systemd.go  yay.go
installer/pkg/timezone/: errors.go  timezone.go
installer/pkg/user/: errors.go  user.go
lib/: arch_chroot.py  partition.py  user_management.py
lib/arch_chroot/: __init__.py  arch_chroot.py
lib/user_management/: __init__.py  user_management.py
