[project]
name = "arch-couple-installer"
version = "0.1.0"
description = ""
authors = [
    {name = "Arianne", email = "example@email.com"},
    {name = "Elliott", email = "example@email.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastjsonschema (>=2.21.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
